test/error/lexing_files/unterminated_comment.st
x := 1. (* this is an unterminated comment
